--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,17 @@
 {
     "name": "magenxcommerce/module-sales-analytics",
     "description": "N/A",
-    "type": "magento2-module",
-    "license": [
-        "OSL-3.0",
-        "AFL-3.0"
-    ],
-    "version": "100.4.0",
     "require": {
         "php": "~7.3.0||~7.4.0",
         "magento/framework": "103.0.*",
         "magento/module-sales": "103.0.*",
         "magento/module-analytics": "100.4.*"
     },
+    "type": "magento2-module",
+    "license": [
+        "OSL-3.0",
+        "AFL-3.0"
+    ],
     "autoload": {
         "files": [
             "registration.php"
@@ -20,5 +19,6 @@
         "psr-4": {
             "Magento\\SalesAnalytics\\": ""
         }
-    }
+    },
+    "version": "100.4.0"
 }
