--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,9 @@
     "name": "magenxcommerce/module-sales-analytics",
     "description": "N/A",
     "require": {
-        "php": "~7.3.0||~7.4.0",
-        "magento/framework": "103.0.*",
-        "magento/module-sales": "103.0.*",
-        "magento/module-analytics": "100.4.*"
+        "php": "~7.1.3||~7.2.0",
+        "magento/framework": "102.0.*",
+        "magento/module-sales": "102.0.*"
     },
     "type": "magento2-module",
     "license": [
@@ -20,5 +19,5 @@
             "Magento\\SalesAnalytics\\": ""
         }
     },
-    "version": "100.4.0"
+    "version": "100.3.0"
 }
